--- a/koren.html
+++ b/koren.html
@@ -16,7 +16,7 @@
             <div class="todo-bloc">
                 <div class="completedTask">
                     <div class="done-header">
-                        <h3>Done</h3>
+                        <h3>Done !</h3>
                     </div>
                     <div class="done-list">
                         <ul id="done-list"></ul>
